do renaming, prepare for adding timer

--- a/MsgIO/MsgIO.vcproj
+++ b/MsgIO/MsgIO.vcproj
@@ -153,7 +153,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\mio_loop.cpp"
+				RelativePath=".\src\mio.cpp"
 				>
 			</File>
 			<File
@@ -179,15 +179,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\include\mio_exception.h"
+				RelativePath=".\include\mio.h"
 				>
 			</File>
 			<File
-				RelativePath=".\include\mio_loop.h"
-				>
-			</File>
-			<File
-				RelativePath=".\include\mio_loop.hmpl"
+				RelativePath=".\include\mio.hmpl"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -197,6 +193,10 @@
 						Name="VCCustomBuildTool"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\include\mio_exception.h"
+				>
 			</File>
 			<File
 				RelativePath=".\include\mio_thread.h"
