--- a/test/test.vcproj
+++ b/test/test.vcproj
@@ -177,6 +177,18 @@
 				RelativePath=".\main.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\test.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test_submit.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\test_timer.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
