implement listen & connect

--- a/MsgIO/MsgIO.vcproj
+++ b/MsgIO/MsgIO.vcproj
@@ -168,6 +168,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\mio_listen.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\mio_loop.cpp"
 					>
 				</File>
