fixed bug.add sync_test

--- a/test/test.vcproj
+++ b/test/test.vcproj
@@ -190,6 +190,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test_sync.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\test_timer.cpp"
 				>
 			</File>
